# scope

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  plan.md
.github/workflows/: release.yml
docs/: index.html  llms.txt  robots.txt  sitemap.xml
src/: App.css  App.tsx  app.rs  main.rs  package.rs  theme.rs  updater.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  package.rs
src-tauri/src/commands/: mod.rs  operations.rs  packages.rs
src-tauri/src/desktop_entries/: mod.rs  parser.rs
src-tauri/src/icons/: mod.rs
src-tauri/src/operations/: mod.rs  uninstall.rs  update.rs
src-tauri/src/safety/: mod.rs
src-tauri/src/scanner/: appimage.rs  apt.rs  flatpak.rs  mod.rs  snap.rs
src-tauri/src/system/: mod.rs
src/app/: AppShell.tsx
src/features/uninstall/: UninstallDialog.tsx
src/features/update/: UpdateDialog.tsx
src/scanner/: appimage.rs  apt.rs  flatpak.rs  mod.rs  snap.rs
src/shared/api/: operations.ts  packages.ts
src/shared/components/: AppIcon.tsx  Select.tsx
src/shared/types/: operations.ts  package.ts
src/ui/: details_view.rs  dialogs.rs  main_view.rs  mod.rs  sidebar.rs
