[package]
name = "scope"
version = "0.1.1"
edition = "2021"
description = "A TUI application for managing Linux packages across multiple package managers"
authors = ["Khurram"]
license = "MIT"

[[bin]]
name = "scope"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Human-readable sizes
humansize = "2.1"

# Serialization (for potential caching)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fuzzy matching for search
fuzzy-matcher = "0.3"

# Directory traversal for AppImage scanning
walkdir = "2.5"

# Regex for parsing
regex = "1.10"

# Glob patterns
glob = "0.3"

# HTTP client for self-update
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Version comparison
semver = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true

[package.metadata.deb]
maintainer = "Khurram Bhutto <khurrambhutto@github>"
copyright = "2025, Khurram Bhutto"
license-file = ["LICENSE", "0"]
extended-description = "A beautiful TUI for managing Linux packages across APT, Snap, Flatpak, and AppImage."
section = "utils"
priority = "optional"
assets = [
    ["target/release/scope", "usr/bin/", "755"],
]
