[package]
name = "scope"
version = "0.1.5"
description = "See, update, and uninstall every app on your Linux system — all in one place"
authors = ["Khurram"]
edition = "2021"

[lib]
name = "scope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
